--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Rob Hinds
-twitter_username: rob_hinds
-name: Rob Hinds
+title: Sergio Gonzalez
+twitter_username:
+name: Sergio Gonzalez
 
 # Build settings
 markdown: kramdown
